# sansdir

./: .gitignore  CLAUDE.md  PLANNING.md  README.md  TASKS.md  demo.tape  pyproject.toml
.github/workflows/: ci.yml
src/sansdir/: __init__.py  __main__.py  app.py  cli.py  config.py
src/sansdir/commands/: __init__.py  _protocols.py  builtins.py  parser.py  registry.py  schema.py
src/sansdir/core/: __init__.py  archive.py  fileops.py  filesystem.py  history.py  mailer.py  oncat.py
src/sansdir/hdf/: __init__.py  batch.py  metadata.py  reader.py
src/sansdir/mask/: __init__.py  api.py  banktube.py  core.py  detector.py  gui.py  mantid_writer.py  writers.py
src/sansdir/plot/: _mantid_render.py  ascii1d.py  ascii2d.py  backend.py  detect.py  generic.py  hdf5_detector.py  image.py  tile.py  window.py
src/sansdir/ui/: __init__.py  command_input.py  dialogs.py  hdf_tree.py  help.py  inline_viewer.py  key_hint_bar.py  keys.py  oncat_browser.py  pane_slot.py  panel.py  pathbar.py  run_catalog.py  statusbar.py  titlebar.py
tests/: conftest.py  test_app.py  test_archive.py  test_batch.py  test_command_input.py  test_config.py  test_file_keys.py  test_fileops.py  test_filesystem.py  test_fixtures.py  test_hdf.py  test_history.py  test_image_viewer.py  test_key_hint_bar.py  test_keys.py  test_mailer.py  test_oncat.py  test_parser.py  test_phase1_commands.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase8.py  test_phase9.py  test_plot.py  test_plot_2d.py  test_plot_generic.py  test_registry.py  test_snapshots.py  test_tags.py
tests/__snapshots__/test_snapshots/: test_snapshot_batch_extract_dialog.raw  test_snapshot_confirm_dialog_danger.raw  test_snapshot_confirm_dialog_default.raw  test_snapshot_mail_dialog.raw  test_snapshot_text_prompt_dialog.raw
tests/data/: LLM_TEST.md  README.md
tests/mask/: test_banktube.py  test_cli.py  test_core.py  test_detector.py  test_gui.py  test_mantid_writer.py  test_writers.py
