[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sansdir"
version = "0.8.0"
description = "MDIR-style terminal file manager for SANS data on the ORNL analysis cluster"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Changwoo Do", email = "doc1@ornl.gov" }]
keywords = ["sans", "neutron", "tui", "ornl", "file-manager", "nexus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "textual>=0.80",
    "click>=8.1",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "h5py>=3.9",
    "httpx>=0.27",
    "tomli>=2.0; python_version<'3.11'",
    "send2trash>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-textual-snapshot>=0.4",
    "ruff>=0.5",
    "mypy>=1.10",
    "pyinstrument>=4.6",
    "pre-commit>=3.7",
]
llm = [
    "anthropic>=0.40",
]
# Optional matplotlib interactive backends (one of):
qt = ["PyQt5>=5.15"]      # pip install "sansdir[qt]"
tk = []                   # tkinter ships with Python on most builds

[project.scripts]
sansdir = "sansdir.cli:main"

[project.urls]
Homepage = "https://github.com/cw-do/sansdir"
Issues = "https://github.com/cw-do/sansdir/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sansdir"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/sansdir"]

